--- a/config/application.yml
+++ b/config/application.yml
@@ -1,4 +1,4 @@
-currencies: [darkcoin, bitcoin]
+currencies: [darkcoin]
 input_value_threshold: 0.01 # Do not set this bigger then ['minimum_transaction_value']
 inputs_to_start: 10
 minimum_transaction_value: 0.01 # Minimum transaction amount without fee is 0.01 for BTC
