--- a/config/application.yml
+++ b/config/application.yml
@@ -4,4 +4,4 @@ inputs_to_start: 1
 minimum_transaction_value: 0.01 # Minimum transaction amount without fee is 0.01 for BTC
 transaction_fee: 0.0001
 transaction_size: 1000 # Size is calculated: Number_of_inputs * 180 + Number_of_out * 34 + 10 + Number_of_inputs
-transactions_to_send: 1 # 9999
+transactions_to_send: 1 # 9999 to clean all wallet from dust
