--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,6 +1,6 @@
 development:
   adapter: mysql2
-  database: holytransaction
+  database: bitvacuum
   pool: 5
   timeout: 5000
   encoding: utf8
@@ -10,7 +10,7 @@ development:
 
 test:
   adapter: mysql2
-  database: holytransaction_test
+  database: bitvacuum_test
   pool: 5
   timeout: 5000
   encoding: utf8
