--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -7,4 +7,6 @@ minimum_transaction_value: 0.01 # Minimum transaction amount without fee is 0.01
 transaction_size: 1000 # Size is calculated: Number_of_inputs * 180 + Number_of_out * 34 + 10 + Number_of_inputs
 #Maximum for BTC, Darkcoin: 1000, Litecoin: 15000/Minute, Dogecoin: ?, Mastercoin: Unlimited?, TetherUS: ?
 transactions_to_send: 1 # 9999 to clean all wallet from dust
+fee: 0.0001 # Fee payed by 1000 bytes
 airbrake_key: YOUR_KEY
+# Note: To send free transactions in most of the XCoins, use transaction_size: 1000, minimum_transaction_value: 0.01 and fee: 0
